--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <img src="https://via.placeholder.com/150x50?text=FuelMaster" alt="FuelMaster Logo" class="logo">
+                <img src="logo.png" alt="FuelMaster Logo" class="logo">
                 <div class="weather-info">
                     <i class="fas fa-cloud"></i> 11°C, Курск <i class="fas fa-arrow-down"></i> 760 мм
                 </div>
@@ -60,12 +60,12 @@
         <div class="container">
             <h2>Скриншоты</h2>
             <div class="gallery">
-                <img src="https://via.placeholder.com/300x600?text=Управление+авто" alt="Управление автомобилями">
-                <img src="https://via.placeholder.com/300x600?text=Расчет+расхода" alt="Расчет расхода">
-                <img src="https://via.placeholder.com/300x600?text=История+и+графики" alt="История и графики">
-                <img src="https://via.placeholder.com/300x600?text=Вход" alt="Экран входа">
+                <img src="screenshot1.jpg" alt="Управление автомобилями">
+                <img src="screenshot2.jpg" alt="Расчет расхода">
+                <img src="screenshot3.jpg" alt="История и графики">
+                <img src="screenshot4.jpg" alt="Экран входа">
             </div>
-            <p>Замените плейсхолдеры на реальные скриншоты.</p>
+            <p>Убедитесь, что скриншоты корректно загружены.</p>
         </div>
     </section>
 
