--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <img src="logo.png" alt="FuelMaster Logo" class="logo">
+                <img src="logo.jpg" alt="FuelMaster Logo" class="logo">
                 <div class="weather-info">
                     <i class="fas fa-cloud"></i> 11°C, Курск <i class="fas fa-arrow-down"></i> 760 мм
                 </div>
@@ -60,12 +60,26 @@
         <div class="container">
             <h2>Скриншоты</h2>
             <div class="gallery">
-                <img src="screenshot1.jpg" alt="Управление автомобилями">
-                <img src="screenshot2.jpg" alt="Расчет расхода">
-                <img src="screenshot3.jpg" alt="История и графики">
-                <img src="screenshot4.jpg" alt="Экран входа">
+                <img src="Screenshot_2025-09-04-02-06-47-69_00ed68a25f49ddc81dfbde00b62141e1.jpg" alt="Управление автомобилями">
+                <img src="Screenshot_2025-09-04-02-06-57-95_00ed68a25f49ddc81dfbde00b62141e1.jpg" alt="Расчет расхода">
+                <img src="Screenshot_2025-09-04-02-07-41-11_00ed68a25f49ddc81dfbde00b62141e1.jpg" alt="История и графики">
+                <img src="Screenshot_2025-09-04-02-08-02-21_00ed68a25f49ddc81dfbde00b62141e1.jpg" alt="Экран входа">
+                <img src="Screenshot_2025-09-04-02-08-09-04_00ed68a25f49ddc81dfbde00b62141e1.jpg" alt="Дополнительный экран 1">
+                <img src="Screenshot_2025-09-04-02-08-23-75_00ed68a25f49ddc81dfbde00b62141e1.jpg" alt="Дополнительный экран 2">
+                <img src="Screenshot_2025-09-04-02-09-36-73_00ed68a25f49ddc81dfbde00b62141e1.jpg" alt="Дополнительный экран 3">
+                <img src="Screenshot_2025-09-04-02-10-41-30_00ed68a25f49ddc81dfbde00b62141e1.jpg" alt="Дополнительный экран 4">
+                <img src="Screenshot_2025-09-04-02-11-01-48_00ed68a25f49ddc81dfbde00b62141e1.jpg" alt="Дополнительный экран 5">
+                <img src="Screenshot_2025-09-04-02-11-36-54_00ed68a25f49ddc81dfbde00b62141e1.jpg" alt="Дополнительный экран 6">
+                <img src="Screenshot_2025-09-04-02-12-12-09_00ed68a25f49ddc81dfbde00b62141e1.jpg" alt="Дополнительный экран 7">
+                <img src="Screenshot_2025-09-04-02-14-06-35_00ed68a25f49ddc81dfbde00b62141e1.jpg" alt="Дополнительный экран 8">
+                <img src="Screenshot_2025-09-04-02-14-18-68_00ed68a25f49ddc81dfbde00b62141e1.jpg" alt="Дополнительный экран 9">
+                <img src="Screenshot_2025-09-04-02-14-42-18_00ed68a25f49ddc81dfbde00b62141e1.jpg" alt="Дополнительный экран 10">
+                <img src="Screenshot_2025-09-04-02-15-02-46_00ed68a25f49ddc81dfbde00b62141e1.jpg" alt="Дополнительный экран 11">
+                <img src="Screenshot_2025-09-04-02-15-10-38_00ed68a25f49ddc81dfbde00b62141e1.jpg" alt="Дополнительный экран 12">
+                <img src="Screenshot_2025-09-04-02-30-09-10_00ed68a25f49ddc81dfbde00b62141e1.jpg" alt="Дополнительный экран 13">
+                <img src="Screenshot_2025-09-04-02-30-23-94_00ed68a25f49ddc81dfbde00b62141e1.jpg" alt="Дополнительный экран 14">
             </div>
-            <p>Убедитесь, что скриншоты корректно загружены.</p>
+            <p>Убедитесь, что все скриншоты корректно загружены.</p>
         </div>
     </section>
 
