--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -12,10 +12,12 @@
         <div class="container">
             <div class="header-content">
                 <img src="logo.jpg" alt="FuelMaster Logo" class="logo">
-                <div class="weather-info">
-                    <i class="fas fa-cloud"></i> 11°C, Курск <i class="fas fa-arrow-down"></i> 760 мм
+                <div class="header-utils">
+                    <div class="weather-info">
+                        <i class="fas fa-cloud"></i> 11°C, Курск <i class="fas fa-arrow-down"></i> 760 мм
+                    </div>
+                    <button id="theme-toggle" aria-label="Переключить тему"><i class="fas fa-adjust"></i></button>
                 </div>
-                <button id="theme-toggle"><i class="fas fa-adjust"></i> Переключить тему</button>
             </div>
         </div>
     </header>
