--- a/index.html
+++ b/index.html
@@ -23,36 +23,38 @@
     </header>
 
     <section id="hero">
+        <div class="parallax-bg"></div>
         <div class="container">
+            <div class="particles"></div>
             <h1>Управляй расходом топлива с умом</h1>
-            <p>Отслеживай автомобили, рассчитывай нормы и получай советы с FuelMaster</p>
-            <a href="#download" class="btn primary"><i class="fas fa-download"></i> Скачать</a>
+            <p>FuelMaster — комплексное приложение для отслеживания автомобилей, расчета топлива и полезных советов.</p>
+            <a href="#download" class="btn primary"><i class="fas fa-download animated-icon"></i> Скачать</a>
         </div>
     </section>
 
     <section id="features">
         <div class="container">
-            <h2>Основные функции</h2>
+            <h2>Основные возможности</h2>
             <div class="feature-grid">
                 <div class="feature-card">
-                    <i class="fas fa-car"></i>
+                    <i class="fas fa-car animated-icon"></i>
                     <h3>Управление авто</h3>
-                    <p>Добавляй и редактируй данные об автомобилях (Peugeot, BMW и др.)</p>
+                    <p>Добавление, редактирование, удаление автомобилей с базой моделей из CSV.</p>
                 </div>
                 <div class="feature-card">
-                    <i class="fas fa-gas-pump"></i>
+                    <i class="fas fa-gas-pump animated-icon"></i>
                     <h3>Расчет расхода</h3>
-                    <p>Учитывает город, трассу, погоду и другие факторы</p>
+                    <p>Учет города/трассы, погоды, кондиционера и других факторов.</p>
                 </div>
                 <div class="feature-card">
-                    <i class="fas fa-chart-line"></i>
+                    <i class="fas fa-chart-line animated-icon"></i>
                     <h3>История и графики</h3>
-                    <p>Сохраняй и анализируй данные о топливе</p>
+                    <p>Хранение, фильтры и визуализация с fl_chart.</p>
                 </div>
                 <div class="feature-card">
-                    <i class="fas fa-lock"></i>
-                    <h3>Безопасность</h3>
-                    <p>Вход через Firebase с синхронизацией</p>
+                    <i class="fas fa-lock animated-icon"></i>
+                    <h3>Безопасность и премиум</h3>
+                    <p>Firebase вход, синхронизация с Firestore для премиум.</p>
                 </div>
             </div>
         </div>
@@ -62,18 +64,30 @@
         <div class="container">
             <h2>Скриншоты</h2>
             <div class="gallery" id="screenshot-gallery">
-                <img src="Screenshot-1-dark.jpg" alt="Управление автомобилями" loading="lazy" data-light="Screenshot-1-light.jpg">
-                <img src="Screenshot-2-dark.jpg" alt="Расчет расхода" loading="lazy" data-light="Screenshot-2-light.jpg">
-                <img src="Screenshot-3-dark.jpg" alt="История и графики" loading="lazy" data-light="Screenshot-3-light.jpg">
-                <img src="Screenshot-4-dark.jpg" alt="Экран входа" loading="lazy" data-light="Screenshot-4-light.jpg">
-                <img src="Screenshot-5-dark.jpg" alt="Дополнительный экран 1" loading="lazy" data-light="Screenshot-5-light.jpg">
-                <img src="Screenshot-6-dark.jpg" alt="Дополнительный экран 2" loading="lazy" data-light="Screenshot-6-light.jpg">
-                <img src="Screenshot-7-dark.jpg" alt="Дополнительный экран 3" loading="lazy" data-light="Screenshot-7-light.jpg">
-                <img src="Screenshot-8-dark.jpg" alt="Дополнительный экран 4" loading="lazy" data-light="Screenshot-8-light.jpg">
-                <img src="Screenshot-9-dark.jpg" alt="Дополнительный экран 5" loading="lazy" data-light="Screenshot-9-light.jpg">
-                <img src="Screenshot-10-dark.jpg" alt="Дополнительный экран 6" loading="lazy">
-                <img src="Screenshot-11-dark.jpg" alt="Дополнительный экран 7" loading="lazy">
-                <img src="Screenshot-12-dark.jpg" alt="Дополнительный экран 8" loading="lazy">
+                <img src="https://github.com/user-attachments/assets/2b646849-1ba2-4b50-b5be-7a50ef011d7e" alt="Скриншот 1" loading="lazy" data-light="Screenshot-1-light.jpg">
+                <img src="https://github.com/user-attachments/assets/acdcca64-7f8d-426c-b49b-0a5c2fae65ea" alt="Скриншот 2" loading="lazy" data-light="Screenshot-2-light.jpg">
+                <img src="https://github.com/user-attachments/assets/4f50cbec-52e2-4df9-82fc-4b6483858d1b" alt="Скриншот 3" loading="lazy" data-light="Screenshot-3-light.jpg">
+                <img src="https://github.com/user-attachments/assets/d5bf34be-5b4f-4886-953a-0c023fa4f412" alt="Скриншот 4" loading="lazy" data-light="Screenshot-4-light.jpg">
+                <img src="https://github.com/user-attachments/assets/48bc266a-abbf-4476-8a8f-f94f5cec8223" alt="Скриншот 5" loading="lazy" data-light="Screenshot-5-light.jpg">
+                <img src="https://github.com/user-attachments/assets/0d7a5bda-ab21-4b1e-afab-ca9409adc2b0" alt="Скриншот 6" loading="lazy" data-light="Screenshot-6-light.jpg">
+                <img src="https://github.com/user-attachments/assets/50f9f920-f008-4040-a438-7350abb975cd" alt="Скриншот 7" loading="lazy" data-light="Screenshot-7-light.jpg">
+                <img src="https://github.com/user-attachments/assets/fb3441f8-c200-4e57-8d5e-1b1290607b8c" alt="Скриншот 8" loading="lazy" data-light="Screenshot-8-light.jpg">
+                <img src="https://github.com/user-attachments/assets/e1217bd5-e956-4e92-93f8-ed67b7abe597" alt="Скриншот 9" loading="lazy" data-light="Screenshot-9-light.jpg">
+                <img src="https://github.com/user-attachments/assets/6eaa8d6a-a97d-4687-b02c-24205a2d2a16" alt="Скриншот 10" loading="lazy">
+                <img src="https://github.com/user-attachments/assets/57b521ed-aad3-43c5-a9be-70e47f4d650b" alt="Скриншот 11" loading="lazy">
+                <img src="https://github.com/user-attachments/assets/68be8383-eca2-42be-8acd-0a5a377cf327" alt="Скриншот 12" loading="lazy">
+                <img src="https://github.com/user-attachments/assets/7eb67611-d216-4dbc-b771-d36136d45459" alt="Скриншот 13" loading="lazy">
+                <img src="https://github.com/user-attachments/assets/a20b3d66-440d-47ed-8d47-237ef5cca0b0" alt="Скриншот 14" loading="lazy">
+                <img src="https://github.com/user-attachments/assets/a2d3395e-bb26-4f0b-891f-03ea30049173" alt="Скриншот 15" loading="lazy">
+                <img src="https://github.com/user-attachments/assets/5a0e5e24-472c-4d37-b00d-3ce4c5085586" alt="Скриншот 16" loading="lazy">
+                <img src="https://github.com/user-attachments/assets/3f5187ea-14bc-4867-9f98-c2153c23b69f" alt="Скриншот 17" loading="lazy">
+                <img src="https://github.com/user-attachments/assets/4d717264-f4ff-4bc7-b497-3edf83afad20" alt="Скриншот 18" loading="lazy">
+                <img src="https://github.com/user-attachments/assets/4ab7338c-2884-4102-818f-d1daf017ee17" alt="Скриншот 19" loading="lazy">
+                <img src="https://github.com/user-attachments/assets/89e8f46c-68dd-45b5-a87d-40d6f4e49613" alt="Скриншот 20" loading="lazy">
+                <img src="https://github.com/user-attachments/assets/0a4a5d3a-001b-4901-bcfb-e314d2aba4ba" alt="Скриншот 21" loading="lazy">
+                <img src="https://github.com/user-attachments/assets/f7ceb6ad-1122-4751-8482-ffb179ddcdea" alt="Скриншот 22" loading="lazy">
+                <img src="https://github.com/user-attachments/assets/1c8946ba-96c7-4697-9055-b6208d507c34" alt="Скриншот 23" loading="lazy">
+                <img src="https://github.com/user-attachments/assets/a71f705e-ef81-4b02-9781-f65c64ac19d6" alt="Скриншот 24" loading="lazy">
             </div>
         </div>
     </section>
@@ -82,8 +96,8 @@
         <div class="container">
             <h2>Скачай FuelMaster</h2>
             <p>Доступно для Android и iOS. Установи прямо сейчас!</p>
-            <a href="https://github.com/maksimyugov89/FuelMaster" class="btn secondary"><img src="logo.jpg" alt="Logo" class="download-logo"> Исходный код</a>
-            <a href="#" class="btn primary"><img src="logo.jpg" alt="Logo" class="download-logo"> Скачать APK</a>
+            <a href="https://github.com/maksimyugov89/FuelMaster" class="btn secondary"><img src="https://github.com/user-attachments/assets/1bceca05-16a6-421e-b3ea-2349624b89a9" alt="Logo" class="download-logo"> Исходный код</a>
+            <a href="#" class="btn primary"><img src="https://github.com/user-attachments/assets/1bceca05-16a6-421e-b3ea-2349624b89a9" alt="Logo" class="download-logo"> Скачать APK</a>
         </div>
     </section>
 
